--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+    <div class="menu-cabecera">
+        <ul>
+            <li>men1</li>
+            <li>men2</li>
+            <li>men3</li>
+        </ul>
+    </div>
+    <div class="banner">
+        BANNER
+    </div>
+    <div class="caja-columnas">
+        <div class="columna colorVerde">
+            1
+        </div>
+        <div class="columna colorCeleste">
+            2
+        </div>
+        <div class="columna colorAguaMarina">
+            3
+        </div>
+    </div>
+    <div class="banner colorBlue">
+        iMAGENES
+    </div>
     
 </body>
 </html>
