--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi Pagina Web🤩</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <div class="menu-cabecera">
-        <ul>
-            <li>men1</li>
-            <li>men2</li>
-            <li>men3</li>
+        <ul class="Menu-superior">
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Mis paginas</a></li>
+            <li><a href="#">Contactanos</a></li>
         </ul>
     </div>
     <div class="banner">
-        BANNER
+        
     </div>
     <div class="caja-columnas">
         <div class="columna colorVerde">
@@ -28,7 +28,7 @@
             3
         </div>
     </div>
-    <div class="banner colorBlue">
+    <div class="contactanos colorBlue">
         iMAGENES
     </div>
     
