--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
             <input type="submit" value="Enviar">
         </form>
     </div>
+    <div class="Footer">
+        <div class="derechos">
+            &copy;Derechos Reservados
+        </div>
+        <ul class="Menu-superior">
+            <li><a href="#"><img src="imagenes/gmail.png"></a></li>
+            <li><a href="#"><img src="imagenes/yahoo.png" ></a></li>
+            <li><a href="#"><img src="imagenes/panorama.png" ></a></li>
+        </ul>
+    </div>
         
 </body>
 </html>
