--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="menu-cabecera">
-        <ul class="Menu-superior">
+        <ul class="Menu-superior Borde-derecho">
             <li><a href="#">Inicio</a></li>
             <li><a href="#">Mis paginas</a></li>
             <li><a href="#">Contactanos</a></li>
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-    <h3>MIS PÁGINAS</h3>
+    <h2>MIS PÁGINAS</h2>
 
     <div class="caja-columnas">
         <div class="columna"> <img src="imagenes/IMAGEN 1.png" alt=""></div>
